--- a/src/sections/Portfolio/Portfolio.module.css
+++ b/src/sections/Portfolio/Portfolio.module.css
@@ -79,6 +79,8 @@
     position: relative !important;
     flex: 0 0 auto;
     scroll-snap-align: start;
+    width: 320px !important; /* Установим фиксированную ширину для карточки */
+    max-width: 320px;
   }
 }
 
